analysis/generated/SentenceParser.py
# Generated from /Users/anhchau/Documents/Principles of Programming Languages/TextAnalyzer_Learning_Web/analysis/grammar/SentenceParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SentenceParser ( Parser ):

    grammarFileName = "SentenceParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "','", "';'", "':'" ]

    symbolicNames = [ "<INVALID>", "GREETING", "THANK_YOU", "SOFT_WORD", 
                      "HEDGE_WORD", "STRONG_WORD", "COMMAND_WORD", "APOLOGY_WORD", 
                      "EMPATHY_WORD", "POLITE_VERB", "REQUEST_WORD", "POSITIVE_ADJ", 
                      "NEGATIVE_EMOTION", "POSITIVE_EMOTION", "POSSESSIVE", 
                      "PRONOUN", "QUESTION_WORD", "TIME_WORD", "CONJUNCTION", 
                      "NEGATION", "ARTICLE", "PREPOSITION", "NUMBER", "COMMON_VERB", 
                      "WORD", "PUNCT", "COMMA", "SEMICOLON", "COLON", "QUOTE", 
                      "EMOTICON", "WS" ]

    RULE_sentence = 0
    RULE_greeting = 1
    RULE_closing = 2
    RULE_polite_closing = 3
    RULE_element = 4
    RULE_polite_phrase = 5
    RULE_apology_phrase = 6
    RULE_request_phrase = 7
    RULE_help_pattern = 8
    RULE_statement_phrase = 9
    RULE_subject_phrase = 10
    RULE_verb_phrase = 11
    RULE_object_phrase = 12
    RULE_feeling_phrase = 13
    RULE_emotional_state = 14
    RULE_emotional_expression = 15
    RULE_question_phrase = 16
    RULE_softener = 17
    RULE_strong_expression = 18
    RULE_basic_word = 19
    RULE_punctuation_element = 20

    ruleNames =  [ "sentence", "greeting", "closing", "polite_closing", 
                   "element", "polite_phrase", "apology_phrase", "request_phrase", 
                   "help_pattern", "statement_phrase", "subject_phrase", 
                   "verb_phrase", "object_phrase", "feeling_phrase", "emotional_state", 
                   "emotional_expression", "question_phrase", "softener", 
                   "strong_expression", "basic_word", "punctuation_element" ]

    EOF = Token.EOF
    GREETING=1
    THANK_YOU=2
    SOFT_WORD=3
    HEDGE_WORD=4
    STRONG_WORD=5
    COMMAND_WORD=6
    APOLOGY_WORD=7
    EMPATHY_WORD=8
    POLITE_VERB=9
    REQUEST_WORD=10
    POSITIVE_ADJ=11
    NEGATIVE_EMOTION=12
    POSITIVE_EMOTION=13
    POSSESSIVE=14
    PRONOUN=15
    QUESTION_WORD=16
    TIME_WORD=17
    CONJUNCTION=18
    NEGATION=19
    ARTICLE=20
    PREPOSITION=21
    NUMBER=22
    COMMON_VERB=23
    WORD=24
    PUNCT=25
    COMMA=26
    SEMICOLON=27
    COLON=28
    QUOTE=29
    EMOTICON=30
    WS=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SentenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def greeting(self):
            return self.getTypedRuleContext(SentenceParser.GreetingContext,0)


        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SentenceParser.ElementContext)
            else:
                return self.getTypedRuleContext(SentenceParser.ElementContext,i)


        def closing(self):
            return self.getTypedRuleContext(SentenceParser.ClosingContext,0)


        def PUNCT(self):
            return self.getToken(SentenceParser.PUNCT, 0)

        def getRuleIndex(self):
            return SentenceParser.RULE_sentence

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentence" ):
                return visitor.visitSentence(self)
            else:
                return visitor.visitChildren(self)




    def sentence(self):

        localctx = SentenceParser.SentenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sentence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 42
                self.greeting()


            self.state = 46 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 45
                    self.element()

                else:
                    raise NoViableAltException(self)
                self.state = 48 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 140) != 0):
                self.state = 50
                self.closing()


            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 53
                self.match(SentenceParser.PUNCT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GreetingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GREETING(self):
            return self.getToken(SentenceParser.GREETING, 0)

        def COMMA(self):
            return self.getToken(SentenceParser.COMMA, 0)

        def getRuleIndex(self):
            return SentenceParser.RULE_greeting

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGreeting" ):
                return visitor.visitGreeting(self)
            else:
                return visitor.visitChildren(self)




    def greeting(self):

        localctx = SentenceParser.GreetingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_greeting)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(SentenceParser.GREETING)
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 57
                self.match(SentenceParser.COMMA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClosingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def THANK_YOU(self):
            return self.getToken(SentenceParser.THANK_YOU, 0)

        def polite_closing(self):
            return self.getTypedRuleContext(SentenceParser.Polite_closingContext,0)


        def getRuleIndex(self):
            return SentenceParser.RULE_closing

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClosing" ):
                return visitor.visitClosing(self)
            else:
                return visitor.visitChildren(self)




    def closing(self):

        localctx = SentenceParser.ClosingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_closing)
        try:
            self.state = 62
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.match(SentenceParser.THANK_YOU)
                pass
            elif token in [3, 7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.polite_closing()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Polite_closingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SOFT_WORD(self):
            return self.getToken(SentenceParser.SOFT_WORD, 0)

        def PUNCT(self):
            return self.getToken(SentenceParser.PUNCT, 0)

        def APOLOGY_WORD(self):
            return self.getToken(SentenceParser.APOLOGY_WORD, 0)

        def getRuleIndex(self):
            return SentenceParser.RULE_polite_closing

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolite_closing" ):
                return visitor.visitPolite_closing(self)
            else:
                return visitor.visitChildren(self)




    def polite_closing(self):

        localctx = SentenceParser.Polite_closingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_polite_closing)
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.match(SentenceParser.SOFT_WORD)
                self.state = 66
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 65
                    self.match(SentenceParser.PUNCT)


                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.match(SentenceParser.APOLOGY_WORD)
                self.state = 70
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 69
                    self.match(SentenceParser.PUNCT)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def polite_phrase(self):
            return self.getTypedRuleContext(SentenceParser.Polite_phraseContext,0)


        def apology_phrase(self):
            return self.getTypedRuleContext(SentenceParser.Apology_phraseContext,0)


        def request_phrase(self):
            return self.getTypedRuleContext(SentenceParser.Request_phraseContext,0)


        def statement_phrase(self):
            return self.getTypedRuleContext(SentenceParser.Statement_phraseContext,0)


        def question_phrase(self):
            return self.getTypedRuleContext(SentenceParser.Question_phraseContext,0)


        def emotional_expression(self):
            return self.getTypedRuleContext(SentenceParser.Emotional_expressionContext,0)


        def softener(self):
            return self.getTypedRuleContext(SentenceParser.SoftenerContext,0)


        def strong_expression(self):
            return self.getTypedRuleContext(SentenceParser.Strong_expressionContext,0)


        def basic_word(self):
            return self.getTypedRuleContext(SentenceParser.Basic_wordContext,0)


        def punctuation_element(self):
            return self.getTypedRuleContext(SentenceParser.Punctuation_elementContext,0)


        def getRuleIndex(self):
            return SentenceParser.RULE_element

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElement" ):
                return visitor.visitElement(self)
            else:
                return visitor.visitChildren(self)




    def element(self):

        localctx = SentenceParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_element)
        try:
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.polite_phrase()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.apology_phrase()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 76
                self.request_phrase()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 77
                self.statement_phrase()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 78
                self.question_phrase()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 79
                self.emotional_expression()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 80
                self.softener()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 81
                self.strong_expression()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 82
                self.basic_word()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 83
                self.punctuation_element()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Polite_phraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SOFT_WORD(self):
            return self.getToken(SentenceParser.SOFT_WORD, 0)

        def POLITE_VERB(self):
            return self.getToken(SentenceParser.POLITE_VERB, 0)

        def PRONOUN(self):
            return self.getToken(SentenceParser.PRONOUN, 0)

        def HEDGE_WORD(self):
            return self.getToken(SentenceParser.HEDGE_WORD, 0)

        def THANK_YOU(self):
            return self.getToken(SentenceParser.THANK_YOU, 0)

        def getRuleIndex(self):
            return SentenceParser.RULE_polite_phrase

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolite_phrase" ):
                return visitor.visitPolite_phrase(self)
            else:
                return visitor.visitChildren(self)




    def polite_phrase(self):

        localctx = SentenceParser.Polite_phraseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_polite_phrase)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.match(SentenceParser.SOFT_WORD)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.match(SentenceParser.POLITE_VERB)
                self.state = 89
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 88
                    self.match(SentenceParser.PRONOUN)


                self.state = 92
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 91
                    self.match(SentenceParser.SOFT_WORD)


                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.match(SentenceParser.HEDGE_WORD)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 4)
                self.state = 95
                self.match(SentenceParser.THANK_YOU)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Apology_phraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def APOLOGY_WORD(self):
            return self.getToken(SentenceParser.APOLOGY_WORD, 0)

        def PRONOUN(self):
            return self.getToken(SentenceParser.PRONOUN, 0)

        def COMMON_VERB(self):
            return self.getToken(SentenceParser.COMMON_VERB, 0)

        def PREPOSITION(self):
            return self.getToken(SentenceParser.PREPOSITION, 0)

        def object_phrase(self):
            return self.getTypedRuleContext(SentenceParser.Object_phraseContext,0)


        def getRuleIndex(self):
            return SentenceParser.RULE_apology_phrase

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitApology_phrase" ):
                return visitor.visitApology_phrase(self)
            else:
                return visitor.visitChildren(self)




    def apology_phrase(self):

        localctx = SentenceParser.Apology_phraseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_apology_phrase)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(SentenceParser.APOLOGY_WORD)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.match(SentenceParser.PRONOUN)
                self.state = 100
                self.match(SentenceParser.COMMON_VERB)
                self.state = 101
                self.match(SentenceParser.APOLOGY_WORD)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 102
                self.match(SentenceParser.APOLOGY_WORD)
                self.state = 104
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                if la_ == 1:
                    self.state = 103
                    self.match(SentenceParser.PREPOSITION)


                self.state = 107
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                if la_ == 1:
                    self.state = 106
                    self.object_phrase()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Request_phraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POLITE_VERB(self):
            return self.getToken(SentenceParser.POLITE_VERB, 0)

        def PRONOUN(self):
            return self.getToken(SentenceParser.PRONOUN, 0)

        def REQUEST_WORD(self):
            return self.getToken(SentenceParser.REQUEST_WORD, 0)

        def help_pattern(self):
            return self.getTypedRuleContext(SentenceParser.Help_patternContext,0)


        def SOFT_WORD(self):
            return self.getToken(SentenceParser.SOFT_WORD, 0)

        def getRuleIndex(self):
            return SentenceParser.RULE_request_phrase

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequest_phrase" ):
                return visitor.visitRequest_phrase(self)
            else:
                return visitor.visitChildren(self)




    def request_phrase(self):

        localctx = SentenceParser.Request_phraseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_request_phrase)
        try:
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(SentenceParser.POLITE_VERB)
                self.state = 112
                self.match(SentenceParser.PRONOUN)
                self.state = 113
                self.match(SentenceParser.REQUEST_WORD)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(SentenceParser.REQUEST_WORD)
                self.state = 116
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
                if la_ == 1:
                    self.state = 115
                    self.help_pattern()


                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 118
                self.match(SentenceParser.SOFT_WORD)
                self.state = 119
                self.match(SentenceParser.PRONOUN)
                self.state = 120
                self.match(SentenceParser.POLITE_VERB)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Help_patternContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PREPOSITION(self):
            return self.getToken(SentenceParser.PREPOSITION, 0)

        def PRONOUN(self):
            return self.getToken(SentenceParser.PRONOUN, 0)

        def object_phrase(self):
            return self.getTypedRuleContext(SentenceParser.Object_phraseContext,0)


        def getRuleIndex(self):
            return SentenceParser.RULE_help_pattern

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHelp_pattern" ):
                return visitor.visitHelp_pattern(self)
            else:
                return visitor.visitChildren(self)




    def help_pattern(self):

        localctx = SentenceParser.Help_patternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_help_pattern)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
                if la_ == 1:
                    self.state = 123
                    self.match(SentenceParser.PREPOSITION)


                self.state = 127
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
                if la_ == 1:
                    self.state = 126
                    self.match(SentenceParser.PRONOUN)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(SentenceParser.PREPOSITION)
                self.state = 130
                self.object_phrase()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_phraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def verb_phrase(self):
            return self.getTypedRuleContext(SentenceParser.Verb_phraseContext,0)


        def subject_phrase(self):
            return self.getTypedRuleContext(SentenceParser.Subject_phraseContext,0)


        def object_phrase(self):
            return self.getTypedRuleContext(SentenceParser.Object_phraseContext,0)


        def PRONOUN(self):
            return self.getToken(SentenceParser.PRONOUN, 0)

        def feeling_phrase(self):
            return self.getTypedRuleContext(SentenceParser.Feeling_phraseContext,0)


        def getRuleIndex(self):
            return SentenceParser.RULE_statement_phrase

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_phrase" ):
                return visitor.visitStatement_phrase(self)
            else:
                return visitor.visitChildren(self)




    def statement_phrase(self):

        localctx = SentenceParser.Statement_phraseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement_phrase)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
                if la_ == 1:
                    self.state = 133
                    self.subject_phrase()


                self.state = 136
                self.verb_phrase()
                self.state = 138
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,22,self._ctx)
                if la_ == 1:
                    self.state = 137
                    self.object_phrase()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.match(SentenceParser.PRONOUN)
                self.state = 141
                self.feeling_phrase()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Subject_phraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRONOUN(self):
            return self.getToken(SentenceParser.PRONOUN, 0)

        def POSSESSIVE(self):
            return self.getToken(SentenceParser.POSSESSIVE, 0)

        def WORD(self):
            return self.getToken(SentenceParser.WORD, 0)

        def ARTICLE(self):
            return self.getToken(SentenceParser.ARTICLE, 0)

        def getRuleIndex(self):
            return SentenceParser.RULE_subject_phrase

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubject_phrase" ):
                return visitor.visitSubject_phrase(self)
            else:
                return visitor.visitChildren(self)




    def subject_phrase(self):

        localctx = SentenceParser.Subject_phraseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_subject_phrase)
        self._la = 0 # Token type
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.match(SentenceParser.PRONOUN)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(SentenceParser.POSSESSIVE)
                self.state = 146
                self.match(SentenceParser.WORD)
                pass
            elif token in [20, 24]:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==20:
                    self.state = 147
                    self.match(SentenceParser.ARTICLE)


                self.state = 150
                self.match(SentenceParser.WORD)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Verb_phraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMON_VERB(self):
            return self.getToken(SentenceParser.COMMON_VERB, 0)

        def POLITE_VERB(self):
            return self.getToken(SentenceParser.POLITE_VERB, 0)

        def WORD(self):
            return self.getToken(SentenceParser.WORD, 0)

        def getRuleIndex(self):
            return SentenceParser.RULE_verb_phrase

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVerb_phrase" ):
                return visitor.visitVerb_phrase(self)
            else:
                return visitor.visitChildren(self)




    def verb_phrase(self):

        localctx = SentenceParser.Verb_phraseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_verb_phrase)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 25166336) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Object_phraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARTICLE(self):
            return self.getToken(SentenceParser.ARTICLE, 0)

        def POSSESSIVE(self):
            return self.getToken(SentenceParser.POSSESSIVE, 0)

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(SentenceParser.WORD)
            else:
                return self.getToken(SentenceParser.WORD, i)

        def PRONOUN(self):
            return self.getToken(SentenceParser.PRONOUN, 0)

        def getRuleIndex(self):
            return SentenceParser.RULE_object_phrase

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObject_phrase" ):
                return visitor.visitObject_phrase(self)
            else:
                return visitor.visitChildren(self)




    def object_phrase(self):

        localctx = SentenceParser.Object_phraseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_object_phrase)
        self._la = 0 # Token type
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14, 20, 24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==20:
                    self.state = 155
                    self.match(SentenceParser.ARTICLE)


                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==14:
                    self.state = 158
                    self.match(SentenceParser.POSSESSIVE)


                self.state = 162 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 161
                        self.match(SentenceParser.WORD)
